// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`when end of year 1`] = `
<div>
  <svg
    class="clock"
    preserveAspectRatio="xMidYMid meet"
    viewBox="-500 -500 1000 1000"
  >
    <defs>
      <lineargradient
        id="month-gradient"
        x1="0"
        x2="0"
        y1="0"
        y2="1"
      >
        <stop
          offset="0%"
          stop-color="gray"
        />
        <stop
          offset="100%"
          stop-color="white"
          stop-opacity="0"
        />
      </lineargradient>
    </defs>
    <g
      class="intervals"
    >
      <path
        d="M0,-456A456,456,0,0,1,231.954,-392.598L81.387,-137.754A160,160,0,0,0,0,-160Z"
        fill="url(#month-gradient)"
        stroke="white"
      />
      <path
        d="M231.954,-392.598A456,456,0,0,1,387.517,-240.347L135.971,-84.332A160,160,0,0,0,81.387,-137.754Z"
        fill="url(#month-gradient)"
        stroke="white"
      />
      <path
        d="M387.517,-240.347A456,456,0,0,1,455.887,-10.138L159.96,-3.557A160,160,0,0,0,135.971,-84.332Z"
        fill="url(#month-gradient)"
        stroke="white"
      />
      <path
        d="M455.887,-10.138A456,456,0,0,1,401.441,216.29L140.856,75.891A160,160,0,0,0,159.96,-3.557Z"
        fill="url(#month-gradient)"
        stroke="white"
      />
      <path
        d="M401.441,216.29A456,456,0,0,1,235.605,390.418L82.668,136.989A160,160,0,0,0,140.856,75.891Z"
        fill="url(#month-gradient)"
        stroke="white"
      />
      <path
        d="M235.605,390.418A456,456,0,0,1,12.1,455.839L4.246,159.944A160,160,0,0,0,82.668,136.989Z"
        fill="url(#month-gradient)"
        stroke="white"
      />
      <path
        d="M12.1,455.839A456,456,0,0,1,-221.455,398.615L-77.703,139.865A160,160,0,0,0,4.246,159.944Z"
        fill="url(#month-gradient)"
        stroke="white"
      />
      <path
        d="M-221.455,398.615A456,456,0,0,1,-393.428,230.544L-138.045,80.893A160,160,0,0,0,-77.703,139.865Z"
        fill="url(#month-gradient)"
        stroke="white"
      />
      <path
        d="M-393.428,230.544A456,456,0,0,1,-455.958,6.214L-159.985,2.18A160,160,0,0,0,-138.045,80.893Z"
        fill="url(#month-gradient)"
        stroke="white"
      />
      <path
        d="M-455.958,6.214A456,456,0,0,1,-395.56,-226.866L-138.793,-79.602A160,160,0,0,0,-159.985,2.18Z"
        fill="url(#month-gradient)"
        stroke="white"
      />
      <path
        d="M-395.56,-226.866A456,456,0,0,1,-231.954,-392.598L-81.387,-137.754A160,160,0,0,0,-138.793,-79.602Z"
        fill="url(#month-gradient)"
        stroke="white"
      />
      <path
        d="M-231.954,-392.598A456,456,0,0,1,0,-456L0,-160A160,160,0,0,0,-81.387,-137.754Z"
        fill="url(#month-gradient)"
        stroke="white"
      />
    </g>
    <g
      class="gutter-interval-names"
    >
      <path
        d="M0,-462A462,462,0,0,1,235.006,-397.764A462,462,0,0,0,0,-462Z"
        id="gutter-interval-names-arcs-0"
      />
      <text>
        <textpath
          dominant-baseline="auto"
          href="#gutter-interval-names-arcs-0"
          startOffset="25%"
          style="text-anchor:middle"
        >
          January
        </textpath>
      </text>
      <path
        d="M235.006,-397.764A462,462,0,0,1,392.615,-243.51A462,462,0,0,0,235.006,-397.764Z"
        id="gutter-interval-names-arcs-1"
      />
      <text>
        <textpath
          dominant-baseline="auto"
          href="#gutter-interval-names-arcs-1"
          startOffset="25%"
          style="text-anchor:middle"
        >
          February
        </textpath>
      </text>
      <path
        d="M392.615,-243.51A462,462,0,0,1,461.886,-10.272A462,462,0,0,0,392.615,-243.51Z"
        id="gutter-interval-names-arcs-2"
      />
      <text>
        <textpath
          dominant-baseline="auto"
          href="#gutter-interval-names-arcs-2"
          startOffset="25%"
          style="text-anchor:middle"
        >
          March
        </textpath>
      </text>
      <path
        d="M406.723,219.136A462,462,0,0,0,461.886,-10.272A462,462,0,0,1,406.723,219.136Z"
        id="gutter-interval-names-arcs-3"
      />
      <text>
        <textpath
          dominant-baseline="hanging"
          href="#gutter-interval-names-arcs-3"
          startOffset="25%"
          style="text-anchor:middle"
        >
          April
        </textpath>
      </text>
      <path
        d="M238.705,395.555A462,462,0,0,0,406.723,219.136A462,462,0,0,1,238.705,395.555Z"
        id="gutter-interval-names-arcs-4"
      />
      <text>
        <textpath
          dominant-baseline="hanging"
          href="#gutter-interval-names-arcs-4"
          startOffset="25%"
          style="text-anchor:middle"
        >
          May
        </textpath>
      </text>
      <path
        d="M12.259,461.837A462,462,0,0,0,238.705,395.555A462,462,0,0,1,12.259,461.837Z"
        id="gutter-interval-names-arcs-5"
      />
      <text>
        <textpath
          dominant-baseline="hanging"
          href="#gutter-interval-names-arcs-5"
          startOffset="25%"
          style="text-anchor:middle"
        >
          June
        </textpath>
      </text>
      <path
        d="M-224.368,403.86A462,462,0,0,0,12.259,461.837A462,462,0,0,1,-224.368,403.86Z"
        id="gutter-interval-names-arcs-6"
      />
      <text>
        <textpath
          dominant-baseline="hanging"
          href="#gutter-interval-names-arcs-6"
          startOffset="25%"
          style="text-anchor:middle"
        >
          July
        </textpath>
      </text>
      <path
        d="M-398.604,233.578A462,462,0,0,0,-224.368,403.86A462,462,0,0,1,-398.604,233.578Z"
        id="gutter-interval-names-arcs-7"
      />
      <text>
        <textpath
          dominant-baseline="hanging"
          href="#gutter-interval-names-arcs-7"
          startOffset="25%"
          style="text-anchor:middle"
        >
          August
        </textpath>
      </text>
      <path
        d="M-461.957,6.296A462,462,0,0,0,-398.604,233.578A462,462,0,0,1,-461.957,6.296Z"
        id="gutter-interval-names-arcs-8"
      />
      <text>
        <textpath
          dominant-baseline="hanging"
          href="#gutter-interval-names-arcs-8"
          startOffset="25%"
          style="text-anchor:middle"
        >
          September
        </textpath>
      </text>
      <path
        d="M-461.957,6.296A462,462,0,0,1,-400.765,-229.851A462,462,0,0,0,-461.957,6.296Z"
        id="gutter-interval-names-arcs-9"
      />
      <text>
        <textpath
          dominant-baseline="auto"
          href="#gutter-interval-names-arcs-9"
          startOffset="25%"
          style="text-anchor:middle"
        >
          October
        </textpath>
      </text>
      <path
        d="M-400.765,-229.851A462,462,0,0,1,-235.006,-397.764A462,462,0,0,0,-400.765,-229.851Z"
        id="gutter-interval-names-arcs-10"
      />
      <text>
        <textpath
          dominant-baseline="auto"
          href="#gutter-interval-names-arcs-10"
          startOffset="25%"
          style="text-anchor:middle"
        >
          November
        </textpath>
      </text>
      <path
        d="M-235.006,-397.764A462,462,0,0,1,0,-462A462,462,0,0,0,-235.006,-397.764Z"
        id="gutter-interval-names-arcs-11"
      />
      <text>
        <textpath
          dominant-baseline="auto"
          href="#gutter-interval-names-arcs-11"
          startOffset="25%"
          style="text-anchor:middle"
        >
          December
        </textpath>
      </text>
    </g>
    <g
      class="quarters"
    >
      <path
        d="M0,-144A144,144,0,0,1,73.249,-123.978L40.694,-68.877A80,80,0,0,0,0,-80Z"
        fill="rgb(240, 228, 66)"
        stroke="white"
      />
      <path
        d="M73.249,-123.978A144,144,0,0,1,122.374,-75.899L67.985,-42.166A80,80,0,0,0,40.694,-68.877Z"
        fill="rgb(240, 228, 66)"
        stroke="white"
      />
      <path
        d="M122.374,-75.899A144,144,0,0,1,143.964,-3.202L79.98,-1.779A80,80,0,0,0,67.985,-42.166Z"
        fill="rgb(240, 228, 66)"
        stroke="white"
      />
      <path
        d="M143.964,-3.202A144,144,0,0,1,126.771,68.302L70.428,37.946A80,80,0,0,0,79.98,-1.779Z"
        fill="rgb(204, 121, 167)"
        stroke="white"
      />
      <path
        d="M126.771,68.302A144,144,0,0,1,74.401,123.29L41.334,68.494A80,80,0,0,0,70.428,37.946Z"
        fill="rgb(204, 121, 167)"
        stroke="white"
      />
      <path
        d="M74.401,123.29A144,144,0,0,1,3.821,143.949L2.123,79.972A80,80,0,0,0,41.334,68.494Z"
        fill="rgb(204, 121, 167)"
        stroke="white"
      />
      <path
        d="M3.821,143.949A144,144,0,0,1,-69.933,125.878L-38.852,69.932A80,80,0,0,0,2.123,79.972Z"
        fill="rgb(86, 180, 233)"
        stroke="white"
      />
      <path
        d="M-69.933,125.878A144,144,0,0,1,-124.24,72.804L-69.022,40.446A80,80,0,0,0,-38.852,69.932Z"
        fill="rgb(86, 180, 233)"
        stroke="white"
      />
      <path
        d="M-124.24,72.804A144,144,0,0,1,-143.987,1.962L-79.993,1.09A80,80,0,0,0,-69.022,40.446Z"
        fill="rgb(86, 180, 233)"
        stroke="white"
      />
      <path
        d="M-143.987,1.962A144,144,0,0,1,-124.914,-71.642L-69.397,-39.801A80,80,0,0,0,-79.993,1.09Z"
        fill="rgb(0, 158, 115)"
        stroke="white"
      />
      <path
        d="M-124.914,-71.642A144,144,0,0,1,-73.249,-123.978L-40.694,-68.877A80,80,0,0,0,-69.397,-39.801Z"
        fill="rgb(0, 158, 115)"
        stroke="white"
      />
      <path
        d="M-73.249,-123.978A144,144,0,0,1,0,-144L0,-80A80,80,0,0,0,-40.694,-68.877Z"
        fill="rgb(0, 158, 115)"
        stroke="white"
      />
    </g>
    <g
      class="hand"
    >
      <circle
        cx="0"
        cy="0"
        r="22.8"
      />
      <line
        stroke-width="9.12"
        transform="rotate(359.99998859589044)"
        x1="0"
        x2="0"
        y1="0"
        y2="-456"
      />
    </g>
    <g
      class="guides disabled"
    >
      <circle
        cx="0"
        cy="0"
        r="480"
      />
      <circle
        cx="0"
        cy="0"
        r="456"
      />
      <circle
        cx="0"
        cy="0"
        r="160"
      />
    </g>
  </svg>
</div>
`;

exports[`when mid year 1`] = `
<div>
  <svg
    class="clock"
    preserveAspectRatio="xMidYMid meet"
    viewBox="-500 -500 1000 1000"
  >
    <defs>
      <lineargradient
        id="month-gradient"
        x1="0"
        x2="0"
        y1="0"
        y2="1"
      >
        <stop
          offset="0%"
          stop-color="gray"
        />
        <stop
          offset="100%"
          stop-color="white"
          stop-opacity="0"
        />
      </lineargradient>
    </defs>
    <g
      class="intervals"
    >
      <path
        d="M0,-456A456,456,0,0,1,231.954,-392.598L81.387,-137.754A160,160,0,0,0,0,-160Z"
        fill="url(#month-gradient)"
        stroke="white"
      />
      <path
        d="M231.954,-392.598A456,456,0,0,1,387.517,-240.347L135.971,-84.332A160,160,0,0,0,81.387,-137.754Z"
        fill="url(#month-gradient)"
        stroke="white"
      />
      <path
        d="M387.517,-240.347A456,456,0,0,1,455.887,-10.138L159.96,-3.557A160,160,0,0,0,135.971,-84.332Z"
        fill="url(#month-gradient)"
        stroke="white"
      />
      <path
        d="M455.887,-10.138A456,456,0,0,1,401.441,216.29L140.856,75.891A160,160,0,0,0,159.96,-3.557Z"
        fill="url(#month-gradient)"
        stroke="white"
      />
      <path
        d="M401.441,216.29A456,456,0,0,1,235.605,390.418L82.668,136.989A160,160,0,0,0,140.856,75.891Z"
        fill="url(#month-gradient)"
        stroke="white"
      />
      <path
        d="M235.605,390.418A456,456,0,0,1,12.1,455.839L4.246,159.944A160,160,0,0,0,82.668,136.989Z"
        fill="url(#month-gradient)"
        stroke="white"
      />
      <path
        d="M12.1,455.839A456,456,0,0,1,-221.455,398.615L-77.703,139.865A160,160,0,0,0,4.246,159.944Z"
        fill="url(#month-gradient)"
        stroke="white"
      />
      <path
        d="M-221.455,398.615A456,456,0,0,1,-393.428,230.544L-138.045,80.893A160,160,0,0,0,-77.703,139.865Z"
        fill="url(#month-gradient)"
        stroke="white"
      />
      <path
        d="M-393.428,230.544A456,456,0,0,1,-455.958,6.214L-159.985,2.18A160,160,0,0,0,-138.045,80.893Z"
        fill="url(#month-gradient)"
        stroke="white"
      />
      <path
        d="M-455.958,6.214A456,456,0,0,1,-395.56,-226.866L-138.793,-79.602A160,160,0,0,0,-159.985,2.18Z"
        fill="url(#month-gradient)"
        stroke="white"
      />
      <path
        d="M-395.56,-226.866A456,456,0,0,1,-231.954,-392.598L-81.387,-137.754A160,160,0,0,0,-138.793,-79.602Z"
        fill="url(#month-gradient)"
        stroke="white"
      />
      <path
        d="M-231.954,-392.598A456,456,0,0,1,0,-456L0,-160A160,160,0,0,0,-81.387,-137.754Z"
        fill="url(#month-gradient)"
        stroke="white"
      />
    </g>
    <g
      class="gutter-interval-names"
    >
      <path
        d="M0,-462A462,462,0,0,1,235.006,-397.764A462,462,0,0,0,0,-462Z"
        id="gutter-interval-names-arcs-0"
      />
      <text>
        <textpath
          dominant-baseline="auto"
          href="#gutter-interval-names-arcs-0"
          startOffset="25%"
          style="text-anchor:middle"
        >
          January
        </textpath>
      </text>
      <path
        d="M235.006,-397.764A462,462,0,0,1,392.615,-243.51A462,462,0,0,0,235.006,-397.764Z"
        id="gutter-interval-names-arcs-1"
      />
      <text>
        <textpath
          dominant-baseline="auto"
          href="#gutter-interval-names-arcs-1"
          startOffset="25%"
          style="text-anchor:middle"
        >
          February
        </textpath>
      </text>
      <path
        d="M392.615,-243.51A462,462,0,0,1,461.886,-10.272A462,462,0,0,0,392.615,-243.51Z"
        id="gutter-interval-names-arcs-2"
      />
      <text>
        <textpath
          dominant-baseline="auto"
          href="#gutter-interval-names-arcs-2"
          startOffset="25%"
          style="text-anchor:middle"
        >
          March
        </textpath>
      </text>
      <path
        d="M406.723,219.136A462,462,0,0,0,461.886,-10.272A462,462,0,0,1,406.723,219.136Z"
        id="gutter-interval-names-arcs-3"
      />
      <text>
        <textpath
          dominant-baseline="hanging"
          href="#gutter-interval-names-arcs-3"
          startOffset="25%"
          style="text-anchor:middle"
        >
          April
        </textpath>
      </text>
      <path
        d="M238.705,395.555A462,462,0,0,0,406.723,219.136A462,462,0,0,1,238.705,395.555Z"
        id="gutter-interval-names-arcs-4"
      />
      <text>
        <textpath
          dominant-baseline="hanging"
          href="#gutter-interval-names-arcs-4"
          startOffset="25%"
          style="text-anchor:middle"
        >
          May
        </textpath>
      </text>
      <path
        d="M12.259,461.837A462,462,0,0,0,238.705,395.555A462,462,0,0,1,12.259,461.837Z"
        id="gutter-interval-names-arcs-5"
      />
      <text>
        <textpath
          dominant-baseline="hanging"
          href="#gutter-interval-names-arcs-5"
          startOffset="25%"
          style="text-anchor:middle"
        >
          June
        </textpath>
      </text>
      <path
        d="M-224.368,403.86A462,462,0,0,0,12.259,461.837A462,462,0,0,1,-224.368,403.86Z"
        id="gutter-interval-names-arcs-6"
      />
      <text>
        <textpath
          dominant-baseline="hanging"
          href="#gutter-interval-names-arcs-6"
          startOffset="25%"
          style="text-anchor:middle"
        >
          July
        </textpath>
      </text>
      <path
        d="M-398.604,233.578A462,462,0,0,0,-224.368,403.86A462,462,0,0,1,-398.604,233.578Z"
        id="gutter-interval-names-arcs-7"
      />
      <text>
        <textpath
          dominant-baseline="hanging"
          href="#gutter-interval-names-arcs-7"
          startOffset="25%"
          style="text-anchor:middle"
        >
          August
        </textpath>
      </text>
      <path
        d="M-461.957,6.296A462,462,0,0,0,-398.604,233.578A462,462,0,0,1,-461.957,6.296Z"
        id="gutter-interval-names-arcs-8"
      />
      <text>
        <textpath
          dominant-baseline="hanging"
          href="#gutter-interval-names-arcs-8"
          startOffset="25%"
          style="text-anchor:middle"
        >
          September
        </textpath>
      </text>
      <path
        d="M-461.957,6.296A462,462,0,0,1,-400.765,-229.851A462,462,0,0,0,-461.957,6.296Z"
        id="gutter-interval-names-arcs-9"
      />
      <text>
        <textpath
          dominant-baseline="auto"
          href="#gutter-interval-names-arcs-9"
          startOffset="25%"
          style="text-anchor:middle"
        >
          October
        </textpath>
      </text>
      <path
        d="M-400.765,-229.851A462,462,0,0,1,-235.006,-397.764A462,462,0,0,0,-400.765,-229.851Z"
        id="gutter-interval-names-arcs-10"
      />
      <text>
        <textpath
          dominant-baseline="auto"
          href="#gutter-interval-names-arcs-10"
          startOffset="25%"
          style="text-anchor:middle"
        >
          November
        </textpath>
      </text>
      <path
        d="M-235.006,-397.764A462,462,0,0,1,0,-462A462,462,0,0,0,-235.006,-397.764Z"
        id="gutter-interval-names-arcs-11"
      />
      <text>
        <textpath
          dominant-baseline="auto"
          href="#gutter-interval-names-arcs-11"
          startOffset="25%"
          style="text-anchor:middle"
        >
          December
        </textpath>
      </text>
    </g>
    <g
      class="quarters"
    >
      <path
        d="M0,-144A144,144,0,0,1,73.249,-123.978L40.694,-68.877A80,80,0,0,0,0,-80Z"
        fill="rgb(240, 228, 66)"
        stroke="white"
      />
      <path
        d="M73.249,-123.978A144,144,0,0,1,122.374,-75.899L67.985,-42.166A80,80,0,0,0,40.694,-68.877Z"
        fill="rgb(240, 228, 66)"
        stroke="white"
      />
      <path
        d="M122.374,-75.899A144,144,0,0,1,143.964,-3.202L79.98,-1.779A80,80,0,0,0,67.985,-42.166Z"
        fill="rgb(240, 228, 66)"
        stroke="white"
      />
      <path
        d="M143.964,-3.202A144,144,0,0,1,126.771,68.302L70.428,37.946A80,80,0,0,0,79.98,-1.779Z"
        fill="rgb(204, 121, 167)"
        stroke="white"
      />
      <path
        d="M126.771,68.302A144,144,0,0,1,74.401,123.29L41.334,68.494A80,80,0,0,0,70.428,37.946Z"
        fill="rgb(204, 121, 167)"
        stroke="white"
      />
      <path
        d="M74.401,123.29A144,144,0,0,1,3.821,143.949L2.123,79.972A80,80,0,0,0,41.334,68.494Z"
        fill="rgb(204, 121, 167)"
        stroke="white"
      />
      <path
        d="M3.821,143.949A144,144,0,0,1,-69.933,125.878L-38.852,69.932A80,80,0,0,0,2.123,79.972Z"
        fill="rgb(86, 180, 233)"
        stroke="white"
      />
      <path
        d="M-69.933,125.878A144,144,0,0,1,-124.24,72.804L-69.022,40.446A80,80,0,0,0,-38.852,69.932Z"
        fill="rgb(86, 180, 233)"
        stroke="white"
      />
      <path
        d="M-124.24,72.804A144,144,0,0,1,-143.987,1.962L-79.993,1.09A80,80,0,0,0,-69.022,40.446Z"
        fill="rgb(86, 180, 233)"
        stroke="white"
      />
      <path
        d="M-143.987,1.962A144,144,0,0,1,-124.914,-71.642L-69.397,-39.801A80,80,0,0,0,-79.993,1.09Z"
        fill="rgb(0, 158, 115)"
        stroke="white"
      />
      <path
        d="M-124.914,-71.642A144,144,0,0,1,-73.249,-123.978L-40.694,-68.877A80,80,0,0,0,-69.397,-39.801Z"
        fill="rgb(0, 158, 115)"
        stroke="white"
      />
      <path
        d="M-73.249,-123.978A144,144,0,0,1,0,-144L0,-80A80,80,0,0,0,-40.694,-68.877Z"
        fill="rgb(0, 158, 115)"
        stroke="white"
      />
    </g>
    <g
      class="hand"
    >
      <circle
        cx="0"
        cy="0"
        r="22.8"
      />
      <line
        stroke-width="9.12"
        transform="rotate(178.02739726591918)"
        x1="0"
        x2="0"
        y1="0"
        y2="-456"
      />
    </g>
    <g
      class="guides disabled"
    >
      <circle
        cx="0"
        cy="0"
        r="480"
      />
      <circle
        cx="0"
        cy="0"
        r="456"
      />
      <circle
        cx="0"
        cy="0"
        r="160"
      />
    </g>
  </svg>
</div>
`;

exports[`when start of year 1`] = `
<div>
  <svg
    class="clock"
    preserveAspectRatio="xMidYMid meet"
    viewBox="-500 -500 1000 1000"
  >
    <defs>
      <lineargradient
        id="month-gradient"
        x1="0"
        x2="0"
        y1="0"
        y2="1"
      >
        <stop
          offset="0%"
          stop-color="gray"
        />
        <stop
          offset="100%"
          stop-color="white"
          stop-opacity="0"
        />
      </lineargradient>
    </defs>
    <g
      class="intervals"
    >
      <path
        d="M0,-456A456,456,0,0,1,231.954,-392.598L81.387,-137.754A160,160,0,0,0,0,-160Z"
        fill="url(#month-gradient)"
        stroke="white"
      />
      <path
        d="M231.954,-392.598A456,456,0,0,1,387.517,-240.347L135.971,-84.332A160,160,0,0,0,81.387,-137.754Z"
        fill="url(#month-gradient)"
        stroke="white"
      />
      <path
        d="M387.517,-240.347A456,456,0,0,1,455.887,-10.138L159.96,-3.557A160,160,0,0,0,135.971,-84.332Z"
        fill="url(#month-gradient)"
        stroke="white"
      />
      <path
        d="M455.887,-10.138A456,456,0,0,1,401.441,216.29L140.856,75.891A160,160,0,0,0,159.96,-3.557Z"
        fill="url(#month-gradient)"
        stroke="white"
      />
      <path
        d="M401.441,216.29A456,456,0,0,1,235.605,390.418L82.668,136.989A160,160,0,0,0,140.856,75.891Z"
        fill="url(#month-gradient)"
        stroke="white"
      />
      <path
        d="M235.605,390.418A456,456,0,0,1,12.1,455.839L4.246,159.944A160,160,0,0,0,82.668,136.989Z"
        fill="url(#month-gradient)"
        stroke="white"
      />
      <path
        d="M12.1,455.839A456,456,0,0,1,-221.455,398.615L-77.703,139.865A160,160,0,0,0,4.246,159.944Z"
        fill="url(#month-gradient)"
        stroke="white"
      />
      <path
        d="M-221.455,398.615A456,456,0,0,1,-393.428,230.544L-138.045,80.893A160,160,0,0,0,-77.703,139.865Z"
        fill="url(#month-gradient)"
        stroke="white"
      />
      <path
        d="M-393.428,230.544A456,456,0,0,1,-455.958,6.214L-159.985,2.18A160,160,0,0,0,-138.045,80.893Z"
        fill="url(#month-gradient)"
        stroke="white"
      />
      <path
        d="M-455.958,6.214A456,456,0,0,1,-395.56,-226.866L-138.793,-79.602A160,160,0,0,0,-159.985,2.18Z"
        fill="url(#month-gradient)"
        stroke="white"
      />
      <path
        d="M-395.56,-226.866A456,456,0,0,1,-231.954,-392.598L-81.387,-137.754A160,160,0,0,0,-138.793,-79.602Z"
        fill="url(#month-gradient)"
        stroke="white"
      />
      <path
        d="M-231.954,-392.598A456,456,0,0,1,0,-456L0,-160A160,160,0,0,0,-81.387,-137.754Z"
        fill="url(#month-gradient)"
        stroke="white"
      />
    </g>
    <g
      class="gutter-interval-names"
    >
      <path
        d="M0,-462A462,462,0,0,1,235.006,-397.764A462,462,0,0,0,0,-462Z"
        id="gutter-interval-names-arcs-0"
      />
      <text>
        <textpath
          dominant-baseline="auto"
          href="#gutter-interval-names-arcs-0"
          startOffset="25%"
          style="text-anchor:middle"
        >
          January
        </textpath>
      </text>
      <path
        d="M235.006,-397.764A462,462,0,0,1,392.615,-243.51A462,462,0,0,0,235.006,-397.764Z"
        id="gutter-interval-names-arcs-1"
      />
      <text>
        <textpath
          dominant-baseline="auto"
          href="#gutter-interval-names-arcs-1"
          startOffset="25%"
          style="text-anchor:middle"
        >
          February
        </textpath>
      </text>
      <path
        d="M392.615,-243.51A462,462,0,0,1,461.886,-10.272A462,462,0,0,0,392.615,-243.51Z"
        id="gutter-interval-names-arcs-2"
      />
      <text>
        <textpath
          dominant-baseline="auto"
          href="#gutter-interval-names-arcs-2"
          startOffset="25%"
          style="text-anchor:middle"
        >
          March
        </textpath>
      </text>
      <path
        d="M406.723,219.136A462,462,0,0,0,461.886,-10.272A462,462,0,0,1,406.723,219.136Z"
        id="gutter-interval-names-arcs-3"
      />
      <text>
        <textpath
          dominant-baseline="hanging"
          href="#gutter-interval-names-arcs-3"
          startOffset="25%"
          style="text-anchor:middle"
        >
          April
        </textpath>
      </text>
      <path
        d="M238.705,395.555A462,462,0,0,0,406.723,219.136A462,462,0,0,1,238.705,395.555Z"
        id="gutter-interval-names-arcs-4"
      />
      <text>
        <textpath
          dominant-baseline="hanging"
          href="#gutter-interval-names-arcs-4"
          startOffset="25%"
          style="text-anchor:middle"
        >
          May
        </textpath>
      </text>
      <path
        d="M12.259,461.837A462,462,0,0,0,238.705,395.555A462,462,0,0,1,12.259,461.837Z"
        id="gutter-interval-names-arcs-5"
      />
      <text>
        <textpath
          dominant-baseline="hanging"
          href="#gutter-interval-names-arcs-5"
          startOffset="25%"
          style="text-anchor:middle"
        >
          June
        </textpath>
      </text>
      <path
        d="M-224.368,403.86A462,462,0,0,0,12.259,461.837A462,462,0,0,1,-224.368,403.86Z"
        id="gutter-interval-names-arcs-6"
      />
      <text>
        <textpath
          dominant-baseline="hanging"
          href="#gutter-interval-names-arcs-6"
          startOffset="25%"
          style="text-anchor:middle"
        >
          July
        </textpath>
      </text>
      <path
        d="M-398.604,233.578A462,462,0,0,0,-224.368,403.86A462,462,0,0,1,-398.604,233.578Z"
        id="gutter-interval-names-arcs-7"
      />
      <text>
        <textpath
          dominant-baseline="hanging"
          href="#gutter-interval-names-arcs-7"
          startOffset="25%"
          style="text-anchor:middle"
        >
          August
        </textpath>
      </text>
      <path
        d="M-461.957,6.296A462,462,0,0,0,-398.604,233.578A462,462,0,0,1,-461.957,6.296Z"
        id="gutter-interval-names-arcs-8"
      />
      <text>
        <textpath
          dominant-baseline="hanging"
          href="#gutter-interval-names-arcs-8"
          startOffset="25%"
          style="text-anchor:middle"
        >
          September
        </textpath>
      </text>
      <path
        d="M-461.957,6.296A462,462,0,0,1,-400.765,-229.851A462,462,0,0,0,-461.957,6.296Z"
        id="gutter-interval-names-arcs-9"
      />
      <text>
        <textpath
          dominant-baseline="auto"
          href="#gutter-interval-names-arcs-9"
          startOffset="25%"
          style="text-anchor:middle"
        >
          October
        </textpath>
      </text>
      <path
        d="M-400.765,-229.851A462,462,0,0,1,-235.006,-397.764A462,462,0,0,0,-400.765,-229.851Z"
        id="gutter-interval-names-arcs-10"
      />
      <text>
        <textpath
          dominant-baseline="auto"
          href="#gutter-interval-names-arcs-10"
          startOffset="25%"
          style="text-anchor:middle"
        >
          November
        </textpath>
      </text>
      <path
        d="M-235.006,-397.764A462,462,0,0,1,0,-462A462,462,0,0,0,-235.006,-397.764Z"
        id="gutter-interval-names-arcs-11"
      />
      <text>
        <textpath
          dominant-baseline="auto"
          href="#gutter-interval-names-arcs-11"
          startOffset="25%"
          style="text-anchor:middle"
        >
          December
        </textpath>
      </text>
    </g>
    <g
      class="quarters"
    >
      <path
        d="M0,-144A144,144,0,0,1,73.249,-123.978L40.694,-68.877A80,80,0,0,0,0,-80Z"
        fill="rgb(240, 228, 66)"
        stroke="white"
      />
      <path
        d="M73.249,-123.978A144,144,0,0,1,122.374,-75.899L67.985,-42.166A80,80,0,0,0,40.694,-68.877Z"
        fill="rgb(240, 228, 66)"
        stroke="white"
      />
      <path
        d="M122.374,-75.899A144,144,0,0,1,143.964,-3.202L79.98,-1.779A80,80,0,0,0,67.985,-42.166Z"
        fill="rgb(240, 228, 66)"
        stroke="white"
      />
      <path
        d="M143.964,-3.202A144,144,0,0,1,126.771,68.302L70.428,37.946A80,80,0,0,0,79.98,-1.779Z"
        fill="rgb(204, 121, 167)"
        stroke="white"
      />
      <path
        d="M126.771,68.302A144,144,0,0,1,74.401,123.29L41.334,68.494A80,80,0,0,0,70.428,37.946Z"
        fill="rgb(204, 121, 167)"
        stroke="white"
      />
      <path
        d="M74.401,123.29A144,144,0,0,1,3.821,143.949L2.123,79.972A80,80,0,0,0,41.334,68.494Z"
        fill="rgb(204, 121, 167)"
        stroke="white"
      />
      <path
        d="M3.821,143.949A144,144,0,0,1,-69.933,125.878L-38.852,69.932A80,80,0,0,0,2.123,79.972Z"
        fill="rgb(86, 180, 233)"
        stroke="white"
      />
      <path
        d="M-69.933,125.878A144,144,0,0,1,-124.24,72.804L-69.022,40.446A80,80,0,0,0,-38.852,69.932Z"
        fill="rgb(86, 180, 233)"
        stroke="white"
      />
      <path
        d="M-124.24,72.804A144,144,0,0,1,-143.987,1.962L-79.993,1.09A80,80,0,0,0,-69.022,40.446Z"
        fill="rgb(86, 180, 233)"
        stroke="white"
      />
      <path
        d="M-143.987,1.962A144,144,0,0,1,-124.914,-71.642L-69.397,-39.801A80,80,0,0,0,-79.993,1.09Z"
        fill="rgb(0, 158, 115)"
        stroke="white"
      />
      <path
        d="M-124.914,-71.642A144,144,0,0,1,-73.249,-123.978L-40.694,-68.877A80,80,0,0,0,-69.397,-39.801Z"
        fill="rgb(0, 158, 115)"
        stroke="white"
      />
      <path
        d="M-73.249,-123.978A144,144,0,0,1,0,-144L0,-80A80,80,0,0,0,-40.694,-68.877Z"
        fill="rgb(0, 158, 115)"
        stroke="white"
      />
    </g>
    <g
      class="hand"
    >
      <circle
        cx="0"
        cy="0"
        r="22.8"
      />
      <line
        stroke-width="9.12"
        transform="rotate(0)"
        x1="0"
        x2="0"
        y1="0"
        y2="-456"
      />
    </g>
    <g
      class="guides disabled"
    >
      <circle
        cx="0"
        cy="0"
        r="480"
      />
      <circle
        cx="0"
        cy="0"
        r="456"
      />
      <circle
        cx="0"
        cy="0"
        r="160"
      />
    </g>
  </svg>
</div>
`;
